// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> renders no sections as active by default with section props input 1`] = `
<ul>
  <li
    key="0"
  >
    <button
      onClick={[Function]}
      type="button"
      value={0}
    >
      Section 1
    </button>
  </li>
  <li
    key="1"
  >
    <button
      onClick={[Function]}
      type="button"
      value={1}
    >
      Section 2
    </button>
  </li>
  <li
    key="2"
  >
    <button
      onClick={[Function]}
      type="button"
      value={2}
    >
      Section 3
    </button>
  </li>
</ul>
`;

exports[`<Accordion /> renders only the last section opened after multiple sections have been clicked 1`] = `
<Accordion
  sections={
    Array [
      Object {
        "content": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        "title": "Section 1",
      },
      Object {
        "content": "Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!",
        "title": "Section 2",
      },
      Object {
        "content": "Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?",
        "title": "Section 3",
      },
    ]
  }
>
  <ul>
    <li
      key="0"
    >
      <button
        onClick={[Function]}
        type="button"
        value={0}
      >
        Section 1
      </button>
    </li>
    <li
      key="1"
    >
      <button
        onClick={[Function]}
        type="button"
        value={1}
      >
        Section 2
      </button>
    </li>
    <li
      key="2"
    >
      <button
        onClick={[Function]}
        type="button"
        value={2}
      >
        Section 3
      </button>
      <p>
        Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
      </p>
    </li>
  </ul>
</Accordion>
`;

exports[`<Accordion /> renders the first section when clicked 1`] = `
<Accordion
  sections={
    Array [
      Object {
        "content": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        "title": "Section 1",
      },
      Object {
        "content": "Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!",
        "title": "Section 2",
      },
      Object {
        "content": "Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?",
        "title": "Section 3",
      },
    ]
  }
>
  <ul>
    <li
      key="0"
    >
      <button
        onClick={[Function]}
        type="button"
        value={0}
      >
        Section 1
      </button>
    </li>
    <li
      key="1"
    >
      <button
        onClick={[Function]}
        type="button"
        value={1}
      >
        Section 2
      </button>
      <p>
        Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
      </p>
    </li>
    <li
      key="2"
    >
      <button
        onClick={[Function]}
        type="button"
        value={2}
      >
        Section 3
      </button>
    </li>
  </ul>
</Accordion>
`;

exports[`<Accordion /> renders this UI with default props, no props sent in 1`] = `
<ul>
  <li
    key="0"
  >
    <button
      onClick={[Function]}
      type="button"
      value={0}
    >
      Default Title
    </button>
  </li>
</ul>
`;
